Add new chat route and view; update index to include link for new chat

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1> All Chats</h1>
+    
+    <form method="Get" action ="/chats/new">
+        <button>New Chat</button>
+    </form>
 
     <% for(let chat of chats){ %>
     <div class="chat">
