Implement chat creation functionality and update form methods

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,10 +8,10 @@
  </head>
  <body>
     <h3>Write new chat...</h3>
-    <form>
-        <input type="text" name="from" placeholder="From..."> <br>
-        <textarea name="msg">Write your message here...</textarea>
-        <input type="text" name="to" placeholder="To..."> <br>
+    <form method="POST" action="/chats">
+        <input type="text" name="from" placeholder="From..."> <br><br>
+        <textarea name="msg">Write your message here...</textarea><br><br>
+        <input type="text" name="to" placeholder="To..."> <br><br>
         <button>Send</button>
     </form>
  </body>
