feat: add method-override package for HTTP verb overriding
- Introduced method-override package (version 3.0.0) to handle HTTP verb overrides.
- Added debug and ms packages as dependencies for method-override.
- Implemented new views for editing and creating chats, including form handling for PUT and POST requests.
- Updated existing views to include edit functionality and improved message display.
- Added necessary files and documentation for the methods and ms packages.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,15 @@
         <h4>To :  <i><%= chat.to %></i> </h4>
         <div class="msg">
         <p><%= chat.message %></p>
+        <form method="GET" action="/chats/<%=chat._id%>/edit">
+            <button>Edit</button>
+        </form>
         </div>
         <hr>
+        <p><%=chat.created_at.toString().split(" ")[4]  %></p>
+        <p><%=chat.created_at.toString().split(" ").slice(0,4).join(" ") %></p>
     </div>
+
     <br><br>
 <% } %>
 
