--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,7 +10,7 @@
     <h3>Write new chat...</h3>
     <form method="POST" action="/chats">
         <input type="text" name="from" placeholder="From..."> <br><br>
-        <textarea name="msg">Write your message here...</textarea><br><br>
+        <textarea name="message">Write your message here...</textarea><br><br>
         <input type="text" name="to" placeholder="To..."> <br><br>
         <button>Send</button>
     </form>
