feat: implement chat deletion functionality and update chat view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,10 @@
         <form method="GET" action="/chats/<%=chat._id%>/edit">
             <button>Edit</button>
         </form>
+        <br>
+        <form method="POST" action="/chats/<%=chat._id%>?_method=DELETE">
+            <button>Delete</button>
+        </form>
         </div>
         <hr>
         <p><%=chat.created_at.toString().split(" ")[4]  %></p>
